feat: more articles added to the next.js course

--- a/src/app/(courses)/nextjs-15/(001)/intro/page.mdx
+++ b/src/app/(courses)/nextjs-15/(001)/intro/page.mdx
@@ -1,11 +1,4 @@
----
-title: "Getting Started with Next.js 14+: A Comprehensive Guide to Building Full-Stack Applications with the App Router"
-date: 2024-11-05
-author: "Mohi"
----
-
-## Introduction
-
+# Getting Started with Next.js 15: A Comprehensive Guide to Building Full-Stack Applications with the App Router"
 **Next.js** has become the go-to framework for building powerful, SEO-friendly, and scalable web applications, especially since the release of versions 14 and 15. These newer versions bring a fundamental shift to Next.js with the introduction of the **App Router**. This update allows for a more modular and streamlined approach to routing and data fetching, enhancing performance and developer experience.
 
 In this post, I’ll break down the basics of Next.js 14+ and the App Router, so you can get started with best practices in building scalable full-stack applications.
