--- a/src/app/(courses)/nextjs-15/(002)/create-next-app/page.mdx
+++ b/src/app/(courses)/nextjs-15/(002)/create-next-app/page.mdx
@@ -1,12 +1,8 @@
----
-title: "Next.js 15 Setup Guide: Basic, Template, and Monorepo Installations with TurboRepo"
-date: 2024-11-05
-author: "Mohi"
----
+# Next.js 15 Setup Guide: Basic, Template, and Monorepo Installations with TurboRepo
 
-## Introduction
+With the release of Next.js 15, new possibilities for modular architecture and high-performance builds have emerged. This guide walks you through setting up a basic Next.js app, adding boilerplate templates for testing, and configuring a **monorepo** setup with **TurboRepo**.
 
-With the release of Next.js 15 (Canary), new possibilities for modular architecture and high-performance builds have emerged. This guide walks you through setting up a basic Next.js app, adding boilerplate templates for testing, and configuring a **monorepo** setup with **TurboRepo**.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/lNV_2KyX_yo?si=Yezy3fTWAAEptf87" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Requirements
 
