feat: navigation added to the nextjs course

--- a/src/app/(courses)/nextjs-15/(001)/intro/page.mdx
+++ b/src/app/(courses)/nextjs-15/(001)/intro/page.mdx
@@ -1,4 +1,11 @@
-# Getting Started with Next.js 15: A Comprehensive Guide to Building Full-Stack Applications with the App Router"
+import { LessonNavigation } from "@/components/lesson-navigation";
+
+export const metadata = {
+  title: "Getting Started with Next.js 15",
+  description: "A Comprehensive Guide to Building Full-Stack Applications with the App Router",
+}
+
+# Getting Started with Next.js 15: A Comprehensive Guide to Building Full-Stack Applications with the App Router
 **Next.js** has become the go-to framework for building powerful, SEO-friendly, and scalable web applications, especially since the release of versions 14 and 15. These newer versions bring a fundamental shift to Next.js with the introduction of the **App Router**. This update allows for a more modular and streamlined approach to routing and data fetching, enhancing performance and developer experience.
 
 In this post, I’ll break down the basics of Next.js 14+ and the App Router, so you can get started with best practices in building scalable full-stack applications.
@@ -143,3 +150,5 @@ Next.js 14+ with the App Router offers a powerful and flexible solution for buil
 Explore the [Next.js documentation](https://nextjs.org/docs) or check out the video above to get a deeper understanding of how to leverage these new features in your projects.
 
 Happy coding!
+
+<LessonNavigation nextUrl={'/nextjs-15/create-next-app'} nextText={'Next.js 15 Setup Guide: Basic, Template, and Monorepo Installations with TurboRepo'} prevUrl={'/nextjs-15'} prevText={'Back to the course'}/>
