--- a/src/app/(courses)/nextjs-15/(002)/create-next-app/page.mdx
+++ b/src/app/(courses)/nextjs-15/(002)/create-next-app/page.mdx
@@ -1,3 +1,10 @@
+import { LessonNavigation } from "@/components/lesson-navigation";
+
+export const metadata = {
+  title: "How to create a Next.js application",
+  description: "Next.js 15 Setup Guide: Basic, Template, and Monorepo Installations with TurboRepo",
+}
+
 # Next.js 15 Setup Guide: Basic, Template, and Monorepo Installations with TurboRepo
 
 With the release of Next.js 15, new possibilities for modular architecture and high-performance builds have emerged. This guide walks you through setting up a basic Next.js app, adding boilerplate templates for testing, and configuring a **monorepo** setup with **TurboRepo**.
@@ -136,3 +143,5 @@ To run the individual Next.js apps:
 Whether you need a basic Next.js setup or a powerful monorepo with TurboRepo, this guide provides the steps to start with Next.js 15. Tailor your configuration based on project needs, from simple applications to complex setups with testing and multiple app modules.
 
 For more details, check out the [Next.js documentation](https://nextjs.org/docs) and the [TurboRepo guide](https://turbo.build/repo/docs).
+
+<LessonNavigation nextUrl={'/nextjs-15/project-structure'} nextText={'Understanding the Next.js Project Structure: An In-Depth Guide'} prevUrl={'/nextjs-15/intro'} prevText={'Getting Started with Next.js 15: A Comprehensive Guide to Building Full-Stack Applications with the App Router'}/>
