--- a/src/app/(courses)/nextjs-15/(003)/project-structure/page.mdx
+++ b/src/app/(courses)/nextjs-15/(003)/project-structure/page.mdx
@@ -1,3 +1,10 @@
+import { LessonNavigation } from "@/components/lesson-navigation";
+
+export const metadata = {
+  title: "Understanding the Next.js Project Structure",
+  description: "Learn the purpose of each default file and folder in a new Next.js project for a well-organized setup",
+}
+
 # Understanding the Next.js Project Structure: An In-Depth Guide
 
 Next.js automatically includes several default files and folders in a new project. In this guide, we will explore the role of each one and how they contribute to a well-organized, efficient project. 
@@ -73,3 +80,5 @@ These guidelines ensure a clean, modular project structure that’s easy to navi
 ---
 
 For a deeper dive, watch the full video embedded above for practical examples and a walk-through of setting up your Next.js project structure.
+
+<LessonNavigation nextUrl={'/nextjs-15/configure-debugging'} nextText={'Configuring Debugging in a Next.js App'} prevUrl={'/nextjs-15/create-next-app'} prevText={'Understanding the Next.js Project Structure: An In-Depth Guide'}/>
