--- a/src/app/(courses)/nextjs-15/(004)/configure-debugging/page.mdx
+++ b/src/app/(courses)/nextjs-15/(004)/configure-debugging/page.mdx
@@ -1,3 +1,10 @@
+import { LessonNavigation } from "@/components/lesson-navigation";
+
+export const metadata = {
+  title: "Configuring Debugging in a Next.js App",
+  description: "Set up debugging in Next.js with VS Code to streamline development",
+}
+
 
 # Configuring Debugging in a Next.js App
 Before diving into routing, let’s configure debugging in a Next.js project to streamline the development experience. We’ll focus on Visual Studio Code (VS Code), as it is widely used, though similar steps apply for other editors like WebStorm (check respective documentation for details).
@@ -70,3 +77,5 @@ With this setup, you can inspect and debug server-side and client-side code seam
 This configuration ensures a smoother development experience, enabling powerful debugging capabilities directly within your VS Code environment.
 
 For a full walkthrough, watch the video embedded above.
+
+<LessonNavigation nextUrl={'/nextjs-15/routing-in-nextjs'} nextText={'Understanding URL Anatomy and Basic Routing in Next.js'} prevUrl={'/nextjs-15/configure-debugging'} prevText={'Configuring Debugging in a Next.js App'}/>
