feat: more links added for nextjs course

--- a/src/app/(courses)/nextjs-15/(006)/layouts-in-nextjs/page.mdx
+++ b/src/app/(courses)/nextjs-15/(006)/layouts-in-nextjs/page.mdx
@@ -95,4 +95,4 @@ Layouts help centralize shared elements and streamline navigation, improving bot
 
 In the next guide, we’ll cover **templates** and explain the differences between templates and layouts in Next.js.
 
-<LessonNavigation nextUrl={'/nextjs-15/project-organization'} nextText={'Mastering Next.js Folder Structure: Best Practices for Organizing Your Project'} prevUrl={'/nextjs-15/routing-in-nextjs'} prevText={'Understanding URL Anatomy and Basic Routing in Next.js'}/>
+<LessonNavigation nextUrl={'/nextjs-15/templates-in-nextjs'} nextText={'Templates in Next.js 15 and their difference with Layouts'} prevUrl={'/nextjs-15/routing-in-nextjs'} prevText={'Understanding URL Anatomy and Basic Routing in Next.js'}/>
