--- a/src/app/(courses)/nextjs-15/(016)/project-organization/page.mdx
+++ b/src/app/(courses)/nextjs-15/(016)/project-organization/page.mdx
@@ -1,3 +1,10 @@
+import { LessonNavigation } from "@/components/lesson-navigation";
+
+export const metadata={
+  title : "Optimal Folder Structure in Next.js: Pages, Routes, Components, and Best Practices Explained",
+  description: "Organize your Next.js project with a scalable folder structure. Learn best practices for pages, APIs, routes, and feature-based organization for a cleaner codebase"
+}
+
 # Mastering Next.js Folder Structure: Best Practices for Organizing Your Project
 
 In this guide, we’ll explore how to create a clean, scalable folder structure in Next.js projects, helping you keep your code organized as your application grows. This video dives into various folder structures and practices for managing pages, APIs, components, data models, and utility functions.
@@ -111,3 +118,5 @@ While naming conventions vary, some common practices include:
 Choosing an effective folder structure in Next.js can simplify development, improve collaboration, and scale better with project growth. By understanding public/private folders, route groups, and organizing around top-level vs. feature-based strategies, you can adapt Next.js projects to best fit your team's workflows.
 
 Stay tuned for more advanced tips in the Next.js ecosystem!
+
+<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/route-groups'} prevText={'Route Groups in Next.js: Organize Pages, Control URLs, & Create Unique Layouts!'}/>
