feat: dynamic routes lesson added

--- a/src/app/(courses)/nextjs-15/(016)/project-organization/page.mdx
+++ b/src/app/(courses)/nextjs-15/(016)/project-organization/page.mdx
@@ -119,4 +119,4 @@ Choosing an effective folder structure in Next.js can simplify development, impr
 
 Stay tuned for more advanced tips in the Next.js ecosystem!
 
-<LessonNavigation nextUrl={''} nextText={''} prevUrl={'/nextjs-15/route-groups'} prevText={'Route Groups in Next.js: Organize Pages, Control URLs, & Create Unique Layouts!'}/>
+<LessonNavigation nextUrl={'/nextjs-15/dynamic-routes'} nextText={'Dynamic routes in Next.js 15'} prevUrl={'/nextjs-15/route-groups'} prevText={'Route Groups in Next.js: Organize Pages, Control URLs, & Create Unique Layouts!'}/>
