--- a/src/app/(courses)/nextjs-15/(010)/browser-pushstate/page.mdx
+++ b/src/app/(courses)/nextjs-15/(010)/browser-pushstate/page.mdx
@@ -5,5 +5,7 @@ export const metadata={
   description: "Enhance client-side navigation in Next.js with window.history.pushState. Learn to create dynamic, stateful experiences, use URL params, and manage navigation events"
 }
 
+# Work with the Browser history and pushState function in Next.js
+
 
 <LessonNavigation nextUrl={'/nextjs-15/handle-errors'} nextText={'How to Handle Unexpected Errors in Next.js 15'} prevUrl={'/nextjs-15/userouter-hook'} prevText={'How to use the useRouter hook in Next.js 15'}/>
